Add image support

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,3 +53,5 @@ extra_javascript:
   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
   - javascripts/tablesort.js
 
+markdown_extensions:
+  - attr_list
