Added Stealth Servers

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,6 +47,8 @@ nav:
   - Dashlaunch: Dashlaunch.md
   - Aurora: Aurora.md
   - Xbox Neighborhood: Neighborhood.md
+  - Reset Glitch Hack: RGH.md
+  - Stealth Servers: stealth-servers.md
   - Downloads: Downloads.md
 
 extra_javascript:
