Added multiple paths

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,7 +48,7 @@ nav:
   - Aurora: Aurora.md
   - Xbox Neighborhood: Neighborhood.md
   - Reset Glitch Hack: RGH.md
-  - Stealth Servers: stealth-servers.md
+  - Stealth Servers: StealthServers.md
   - Downloads: Downloads.md
 
 extra_javascript:
