--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,9 +34,9 @@ plugins:
   - git-revision-date-localized:
         enable_creation_date: true
         type: datetime
- #- git-committers:
- #      repository: elasticpanda69/HardUnlocks
- #      branch: main
+  - git-committers:
+        repository: elasticpanda69/HardUnlocks
+        branch: main
 
 repo_url: https://github.com/elasticpanda69/HardUnlocks
 repo_name: HardUnlocks
