--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch_depth: 0
       - name: Configure Git Credentials
         run: |
           git config user.name github-actions[bot]
@@ -25,6 +27,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-          fetch_depth: 0
       - run: pip install mkdocs-material
       - run: mkdocs gh-deploy --force
