--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,5 @@ jobs:
           restore-keys: |
             mkdocs-material-
       - run: pip install mkdocs-material
-      - run: pip install -r docs/requirements.txt
+      - run: pip install -r requirements.txt
       - run: mkdocs gh-deploy --force
